--- a/scss/index.scss
+++ b/scss/index.scss
@@ -489,7 +489,6 @@ main {
 
   
 
-
   #skill {
     position: relative;
     margin-bottom: $section-end;
@@ -539,12 +538,8 @@ main {
         //   // width: 100%;
         //   // height: 60%;
         //   background-color: rgba(252, 252, 252, 0.6);
-
-    
         // }
       } // track
-
-
 
       .skill-info {
         position: relative;
@@ -635,11 +630,8 @@ main {
           }
         }
         // skill-info 공통소스 끝 (올리기)
-
       } // skill-info
     } // skill-bg
-
-
 
     .skill-circle {
       position: absolute;
@@ -743,10 +735,14 @@ main {
         .pofol-thumbnail {
           position: relative;
           width: 100%;
+          box-shadow: rgba(0, 0, 0, 0.29) 0px 10px 20px, rgba(0, 0, 0, 0.18) 0px 6px 6px;
+
 
           img {
+            display: block;
             width: 100%;
-            background-color: #0065f4;
+
+            // background-color: #0065f4;
           } // img
         } // pofol-thumbnail
 
@@ -755,9 +751,9 @@ main {
           text-align: left;
 
           @include responsive(tablet-screens) {
-            // flex 속성 비율 지정하는 법 공부해서 적용하기 !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
             text-align: unset;
-            background-color: #cc6699;
+            // background-color: #cc6699;
+            width: min(80%, 400px);
           }
 
           & > div {
@@ -837,8 +833,6 @@ main {
         }
       } // right
     } // responsive - left&right 레이아웃 설정
-
-
   } // #portfolio
 
 
