--- a/css/index.css
+++ b/css/index.css
@@ -169,6 +169,22 @@ body {
     transform: translate3d(100%, 0, 0);
   }
 }
+@-webkit-keyframes trackPath {
+  0% {
+    offset-distance: 0;
+  }
+  100% {
+    offset-distance: 100%;
+  }
+}
+@keyframes trackPath {
+  0% {
+    offset-distance: 0;
+  }
+  100% {
+    offset-distance: 100%;
+  }
+}
 /* ==================== header ==================== */
 header {
   position: relative;
@@ -342,6 +358,11 @@ header #home .mobile-nav-wrap .mobile-nav li a:hover {
   font-size: 56px;
   font-family: mckloud-full;
   transition: 0.8s;
+}
+header #home .mobile-nav-wrap .mobile-nav li a .active {
+  color: #fcfcfc;
+  font-size: 56px;
+  font-family: mckloud-full;
 }
 header #home .intro-flip-wrap {
   position: absolute;
@@ -614,9 +635,9 @@ main #skill .skill-circle {
 main #skill .skill-circle .circle {
   position: absolute;
   width: 60px;
-  height: 60px;
   cursor: pointer;
   border-radius: 50%;
+  height: 60px;
   font-size: 16px;
   font-weight: 600;
   color: #eee;
@@ -627,94 +648,90 @@ main #skill .skill-circle .circle:hover {
   -webkit-animation-play-state: paused;
           animation-play-state: paused;
 }
-@-webkit-keyframes trackPath {
-  0% {
-    offset-distance: 0;
-  }
-  100% {
-    offset-distance: 100%;
-  }
-}
-@keyframes trackPath {
-  0% {
-    offset-distance: 0;
-  }
-  100% {
-    offset-distance: 100%;
-  }
-}
 main #skill .skill-circle .cir-html {
-  top: -900px;
-  left: -40px;
+  top: -920px;
+  left: 0px;
   background-color: #f16529;
-  -webkit-animation: trackPath 16s linear infinite;
-          animation: trackPath 16s linear infinite;
-  offset-path: path("M977.89,435.1S1017.07,205.51,717,176.22,305.36,232.4,238.81,355s26.41,163.54,59.26,164.32,81.73,9.13,123.51,43.8S642.87,698,767.92,680.11,966,597.12,977.89,435.1Z");
+  -webkit-animation: trackPath 20s linear infinite;
+          animation: trackPath 20s linear infinite;
+  offset-path: path("M920.40,435.1S1017.07,205.51,717,176.22,305.36,232.4,238.81,355s26.41,163.54,59.26,164.32,81.73,9.13,123.51,43.8S642.87,698,767.92,680.11,866,558.12,920.40,435.1Z");
 }
 main #skill .skill-circle .cir-css {
-  top: -880px;
-  left: -40px;
+  top: -920px;
+  left: -30px;
   background-color: #0065f4;
-  -webkit-animation: trackPath 12s linear infinite;
-          animation: trackPath 12s linear infinite;
+  -webkit-animation: trackPath 20s 500ms linear infinite;
+          animation: trackPath 20s 500ms linear infinite;
   offset-path: path("M1001.17,438.72s41.55-246.48-276.6-277.93S288.07,221.1,217.5,352.72s28,175.58,62.84,176.42,86.66,9.8,131,47S645.94,721,778.54,701.76,988.56,612.66,1001.17,438.72Z");
 }
 main #skill .skill-circle .cir-sass {
-  top: -945px;
-  left: 20px;
+  top: -920px;
+  left: -40px;
   background-color: #cc6699;
-  -webkit-animation: trackPath 14s ease-in-out infinite;
-          animation: trackPath 14s ease-in-out infinite;
+  -webkit-animation: trackPath 20s 1000ms linear infinite;
+          animation: trackPath 20s 1000ms linear infinite;
+  offset-path: path("M1060,440S1096.68,156.74,734.88,132,238.5,189.56,200.25,339.24s31.85,199.67,90.46,200.62S328.26,551,378.64,593.33,645.47,758,796.25,736.16,1035.09,634.84,1060,440Z");
 }
 main #skill .skill-circle .cir-bootstrap {
   top: -920px;
   left: 0;
   background-color: #7952b3;
-  -webkit-animation: trackPath 14s ease-in-out infinite;
-          animation: trackPath 14s ease-in-out infinite;
+  -webkit-animation: trackPath 20s 1500ms linear infinite;
+          animation: trackPath 20s 1500ms linear infinite;
+  offset-path: path("M1001.17,438.72s41.55-246.48-276.6-277.93S288.07,221.1,217.5,352.72s28,175.58,62.84,176.42,86.66,9.8,131,47S645.94,721,778.54,701.76,988.56,612.66,1001.17,438.72Z");
 }
 main #skill .skill-circle .cir-javascript {
-  top: -940px;
-  left: 0;
+  top: -880px;
+  left: -30px;
   color: #666;
   background-color: #ffdf00;
-  -webkit-animation: trackPath 18s linear infinite;
-          animation: trackPath 18s linear infinite;
+  -webkit-animation: trackPath 20s 500ms linear infinite;
+          animation: trackPath 20s 500ms linear infinite;
+  offset-path: path("M1001.17,438.72s41.55-246.48-276.6-277.93S288.07,221.1,217.5,352.72s28,175.58,62.84,176.42,86.66,9.8,131,47S645.94,721,778.54,701.76,988.56,612.66,1001.17,438.72Z");
 }
 main #skill .skill-circle .cir-jquery {
   top: -940px;
   left: 0;
   background-color: #0868ac;
-  -webkit-animation: trackPath 14s ease-in-out infinite;
-          animation: trackPath 14s ease-in-out infinite;
+  -webkit-animation: trackPath 20s 2500ms linear infinite;
+          animation: trackPath 20s 2500ms linear infinite;
+  offset-path: path("M1060,440S1096.68,156.74,734.88,132,238.5,189.56,200.25,339.24s31.85,199.67,90.46,200.62S328.26,551,378.64,593.33,645.47,758,796.25,736.16,1035.09,634.84,1060,440Z");
 }
 main #skill .skill-circle .cir-react {
-  top: -940px;
+  top: -860px;
   left: 0;
   background-color: #6ecff1;
-  -webkit-animation: trackPath 18s linear infinite;
-          animation: trackPath 18s linear infinite;
+  -webkit-animation: trackPath 20s 3000ms linear infinite;
+          animation: trackPath 20s 3000ms linear infinite;
+  offset-path: path("M920.40,435.1S1017.07,205.51,717,176.22,305.36,232.4,238.81,355s26.41,163.54,59.26,164.32,81.73,9.13,123.51,43.8S642.87,698,767.92,680.11,866,558.12,920.40,435.1Z");
 }
 main #skill .skill-circle .cir-photoshop {
   top: -940px;
   left: 0;
   background-color: #31a8ff;
-  -webkit-animation: trackPath 14s ease-in-out infinite;
-          animation: trackPath 14s ease-in-out infinite;
+  -webkit-animation: trackPath 20s 3500ms linear infinite;
+          animation: trackPath 20s 3500ms linear infinite;
+  offset-path: path("M1001.17,438.72s41.55-246.48-276.6-277.93S288.07,221.1,217.5,352.72s28,175.58,62.84,176.42,86.66,9.8,131,47S645.94,721,778.54,701.76,988.56,612.66,1001.17,438.72Z");
 }
 main #skill .skill-circle .cir-illust {
-  top: -940px;
-  left: 0;
+  top: -900px;
+  left: -40px;
   background-color: #ff9a00;
-  -webkit-animation: trackPath 14s ease-in-out infinite;
-          animation: trackPath 14s ease-in-out infinite;
+  -webkit-animation: trackPath 20s 4000ms linear infinite;
+          animation: trackPath 20s 4000ms linear infinite;
+  offset-path: path("M1060,440S1096.68,156.74,734.88,132,238.5,189.56,200.25,339.24s31.85,199.67,90.46,200.62S328.26,551,378.64,593.33,645.47,758,796.25,736.16,1035.09,634.84,1060,440Z");
 }
 main #portfolio {
   text-align: center;
 }
 main #portfolio .pofol-box {
   width: 100%;
-  margin-bottom: 160px;
+  margin-bottom: 120px;
+}
+@media screen and (min-width: 768px) {
+  main #portfolio .pofol-box {
+    margin-bottom: 160px;
+  }
 }
 @media screen and (min-width: 768px) {
   main #portfolio .pofol-box .flexbox {
@@ -725,12 +742,19 @@ main #portfolio .pofol-box {
 main #portfolio .pofol-box .flexbox .pofol-thumbnail {
   position: relative;
   width: 100%;
-  margin-bottom: 28px;
-  box-shadow: rgba(0, 0, 0, 0.29) 0px 10px 20px, rgba(0, 0, 0, 0.18) 0px 6px 6px;
 }
 main #portfolio .pofol-box .flexbox .pofol-thumbnail img {
   display: block;
   width: 100%;
+  margin-bottom: 28px;
+  box-shadow: rgba(0, 0, 0, 0.29) 0px 10px 20px;
+}
+@media screen and (min-width: 768px) {
+  main #portfolio .pofol-box .flexbox .pofol-thumbnail img {
+    flex-direction: row;
+    justify-content: space-between;
+    margin-bottom: 0;
+  }
 }
 main #portfolio .pofol-box .flexbox .pofol-info {
   text-align: left;
@@ -772,20 +796,20 @@ main #portfolio .pofol-box .flexbox .pofol-info .modal-btn button:last-child {
 main #portfolio .pofol-box .flexbox .pofol-info .modal-btn button:hover {
   color: #77addf;
   background-color: #ddefc4;
-  transition: 0.2s;
+  transition: 0.28s;
 }
 @media screen and (min-width: 768px) {
   main #portfolio .left {
     text-align: left;
   }
   main #portfolio .left .pofol-thumbnail {
-    margin-right: 20px;
+    margin-right: 40px;
   }
   main #portfolio .right {
     text-align: right;
   }
   main #portfolio .right .pofol-thumbnail {
-    margin-left: 20px;
+    margin-left: 40px;
     order: 2;
   }
   main #portfolio .right .pofol-info {
@@ -819,16 +843,17 @@ footer .footer-bg .contact {
     font-size: 24px;
   }
 }
-footer .footer-bg .contact address {
+footer .footer-bg .contact a {
+  display: inline-block;
   margin: 24px 0 60px 0;
   cursor: pointer;
   font-size: 32px;
 }
-footer .footer-bg .contact address:hover {
+footer .footer-bg .contact a:hover {
   color: #77addf;
 }
 @media screen and (min-width: 768px) {
-  footer .footer-bg .contact address {
+  footer .footer-bg .contact a {
     font-size: 48px;
   }
 }
