--- a/scss/index.scss
+++ b/scss/index.scss
@@ -82,14 +82,14 @@ body {
   }
 }
 
-// @keyframes trackPath{
-//   0%{
-//     offset-distance: 0;
-//   }
-//   100%{
-//     offset-distance: 100%;
-//   }
-// }
+@keyframes trackPath{
+  0%{
+    offset-distance: 0;
+  }
+  100%{
+    offset-distance: 100%;
+  }
+}
 
 
 
@@ -299,7 +299,6 @@ header {
         font-family: mckloud-stroke;
 
         li {
-
           a {
             font-size: 52px;
             letter-spacing: 8px;
@@ -311,6 +310,12 @@ header {
               font-size: 56px;
               font-family: mckloud-full;
               transition: 0.8s;
+            }
+
+            .active {
+              color: $body-bg;
+              font-size: 56px;
+              font-family: mckloud-full;
             }
           } // a
         } // li
@@ -637,82 +642,80 @@ main {
       position: absolute;
       top: 0; 
 
-
       .circle {
         position: absolute;
         width: 60px;
-        height: 60px;
         cursor: pointer;
         border-radius: 50%;
+        height: 60px;
         font-size: 16px;
         font-weight: 600;
         color: #eee;
         line-height: 60px;
         transform: rotate(90deg);
-        // offset-path: path('M1001.17,438.72s41.55-246.48-276.6-277.93S288.07,221.1,217.5,352.72s28,175.58,62.84,176.42,86.66,9.8,131,47S645.94,721,778.54,701.76,988.56,612.66,1001.17,438.72Z');
-
+        
         &:hover {
           animation-play-state: paused;
         }
       }
 
-      @keyframes trackPath{
-        0%{
-          offset-distance: 0;
-        }
-        100%{
-          offset-distance: 100%;
-        }
-      }
-
       .cir-html {
-        top: -900px; left: -40px;
+        top: -920px; left: 0px;
         background-color: #f16529;
-        animation: trackPath 16s linear infinite;
-        offset-path: path('M977.89,435.1S1017.07,205.51,717,176.22,305.36,232.4,238.81,355s26.41,163.54,59.26,164.32,81.73,9.13,123.51,43.8S642.87,698,767.92,680.11,966,597.12,977.89,435.1Z');
+        animation: trackPath 20s linear infinite;
+        offset-path: path('M920.40,435.1S1017.07,205.51,717,176.22,305.36,232.4,238.81,355s26.41,163.54,59.26,164.32,81.73,9.13,123.51,43.8S642.87,698,767.92,680.11,866,558.12,920.40,435.1Z');
       }
 
       .cir-css {
-        top: -880px; left: -40px;
+        top: -920px; left: -30px;
         background-color: #0065f4;
-        animation: trackPath 12s linear infinite;
+        animation: trackPath 20s 500ms linear infinite;
         offset-path: path('M1001.17,438.72s41.55-246.48-276.6-277.93S288.07,221.1,217.5,352.72s28,175.58,62.84,176.42,86.66,9.8,131,47S645.94,721,778.54,701.76,988.56,612.66,1001.17,438.72Z');
       }
       .cir-sass {
-        top: -945px; left: 20px;
+        top: -920px; left: -40px;
         background-color: #cc6699;
-        animation: trackPath 14s ease-in-out infinite;
+        animation: trackPath 20s 1000ms linear infinite;
+        offset-path: path('M1060,440S1096.68,156.74,734.88,132,238.5,189.56,200.25,339.24s31.85,199.67,90.46,200.62S328.26,551,378.64,593.33,645.47,758,796.25,736.16,1035.09,634.84,1060,440Z');
+
       }
       .cir-bootstrap {
         top: -920px; left: 0;
         background-color: #7952b3;
-        animation: trackPath 14s ease-in-out infinite;
+        animation: trackPath 20s 1500ms linear infinite;
+        offset-path: path('M1001.17,438.72s41.55-246.48-276.6-277.93S288.07,221.1,217.5,352.72s28,175.58,62.84,176.42,86.66,9.8,131,47S645.94,721,778.54,701.76,988.56,612.66,1001.17,438.72Z');
+        
       }
       .cir-javascript {
-        top: -940px; left: 0;
+        top: -880px; left: -30px;
         color: #666;
         background-color: #ffdf00;
-        animation: trackPath 18s linear infinite;
+        animation: trackPath 20s 500ms linear infinite;
+        offset-path: path('M1001.17,438.72s41.55-246.48-276.6-277.93S288.07,221.1,217.5,352.72s28,175.58,62.84,176.42,86.66,9.8,131,47S645.94,721,778.54,701.76,988.56,612.66,1001.17,438.72Z');
       }
       .cir-jquery {
         top: -940px; left: 0;
         background-color: #0868ac;
-        animation: trackPath 14s ease-in-out infinite;
+        animation: trackPath 20s 2500ms linear infinite;
+        offset-path: path('M1060,440S1096.68,156.74,734.88,132,238.5,189.56,200.25,339.24s31.85,199.67,90.46,200.62S328.26,551,378.64,593.33,645.47,758,796.25,736.16,1035.09,634.84,1060,440Z');
       }
       .cir-react {
-        top: -940px; left: 0;
+        top: -860px; left: 0;
         background-color: #6ecff1;
-        animation: trackPath 18s linear infinite;
+        animation: trackPath 20s 3000ms linear infinite;
+        offset-path: path('M920.40,435.1S1017.07,205.51,717,176.22,305.36,232.4,238.81,355s26.41,163.54,59.26,164.32,81.73,9.13,123.51,43.8S642.87,698,767.92,680.11,866,558.12,920.40,435.1Z');
       }
       .cir-photoshop {
         top: -940px; left: 0;
         background-color: #31a8ff;
-        animation: trackPath 14s ease-in-out infinite;
+        animation: trackPath 20s 3500ms linear infinite;
+        offset-path: path('M1001.17,438.72s41.55-246.48-276.6-277.93S288.07,221.1,217.5,352.72s28,175.58,62.84,176.42,86.66,9.8,131,47S645.94,721,778.54,701.76,988.56,612.66,1001.17,438.72Z');
       }
       .cir-illust {
-        top: -940px; left: 0;
+        top: -900px; left: -40px;
         background-color: #ff9a00;
-        animation: trackPath 14s ease-in-out infinite;
+        animation: trackPath 20s 4000ms linear infinite;
+        offset-path: path('M1060,440S1096.68,156.74,734.88,132,238.5,189.56,200.25,339.24s31.85,199.67,90.46,200.62S328.26,551,378.64,593.33,645.47,758,796.25,736.16,1035.09,634.84,1060,440Z');
       }
     } // skill-circle
   } // #skill
@@ -724,7 +727,11 @@ main {
     // pofol-box 공통소스 시작
     .pofol-box {
       width: 100%;
-      margin-bottom: 160px;
+      margin-bottom: 120px;
+
+      @include responsive(tablet-screens) {
+        margin-bottom: 160px;
+      }
 
       .flexbox {
         @include responsive(tablet-screens) {
@@ -735,26 +742,28 @@ main {
         .pofol-thumbnail {
           position: relative;
           width: 100%;
-          margin-bottom: 28px;
-          box-shadow: rgba(0, 0, 0, 0.29) 0px 10px 20px, rgba(0, 0, 0, 0.18) 0px 6px 6px;
-
-
+          
           img {
             display: block;
             width: 100%;
+            margin-bottom: 28px;
+            box-shadow: rgba(0, 0, 0, 0.29) 0px 10px 20px;
 
-            // background-color: #0065f4;
+            @include responsive(tablet-screens) {
+              flex-direction: row;
+              justify-content: space-between;
+              margin-bottom: 0;
+            }
           } // img
         } // pofol-thumbnail
-
 
         .pofol-info {
           text-align: left;
 
           @include responsive(tablet-screens) {
             text-align: unset;
-            // background-color: #cc6699;
             width: min(80%, 400px);
+            // background-color: #cc6699;
           }
 
           & > div {
@@ -778,7 +787,6 @@ main {
             button {
               width: 128px;
               height: 48px;
-              // margin-right: 24px;
               border-radius: 20px;
               border: none;
               font-size: 16px;
@@ -793,7 +801,7 @@ main {
               &:hover {
                 color: $color-main;
                 background-color: $color-sub;
-                transition: 0.2s;
+                transition: 0.28s;
               }
             } // button
           } // modal-btn
@@ -807,7 +815,7 @@ main {
         text-align: left;
 
         .pofol-thumbnail {
-          margin-right: 20px;
+          margin-right: 40px;
         }
       } // left
 
@@ -815,7 +823,7 @@ main {
         text-align: right;
 
         .pofol-thumbnail {
-          margin-left: 20px;
+          margin-left: 40px;
           order: 2;
         }
 
@@ -859,7 +867,8 @@ footer {
         font-size: 24px;
       }
 
-      address {
+      a {
+        display: inline-block;
         margin: 24px 0 60px 0;
         cursor: pointer;
         font-size: 32px;
