--- a/scss/index.scss
+++ b/scss/index.scss
@@ -328,6 +328,10 @@ header {
       top: 50%; left: 50%;
       transform: translate(-50%, -50%);
       text-align: center;
+
+      h2 {
+        font-weight: 500;
+      }
       
       #textFlip {
         position: relative;
