--- a/scss/index.scss
+++ b/scss/index.scss
@@ -215,7 +215,7 @@ header {
           line-height: 60px;
 
           a {
-            color: $body-bg;
+            color: #000;
           }
 
           a:hover {
@@ -226,7 +226,9 @@ header {
       } // gnb
 
       .menu_top {
-        background-color: $color-main;
+        border-bottom: 1px solid  rgba(119, 173, 223, .8);
+        backdrop-filter: blur(3px);
+        // background-color: rgba(119, 173, 223, .8);
         transition: 1s;
       }
     } // nav
@@ -264,7 +266,6 @@ header {
         position: absolute;
         top: 24px; right: 40px;
         cursor: pointer;
-        background-color: #0065f4;
 
         &::before,
         &::after {
@@ -420,7 +421,7 @@ main {
             // transition: all 1s;
           }
 
-          // *************************************
+          // ***************flip미완성**********************
           .flip {
 
             .front {
@@ -432,7 +433,6 @@ main {
               transform:rotateY(180deg);
               
             }
-
           } // flip
         } // me-emoticon
   
@@ -445,17 +445,13 @@ main {
           }
 
           strong {
-            font-size: $strong-text-L;
+            font-size: $strong-text-M;
           }
         } // me-introduce
       } // flexbox
     } // about-me
 
     .about-work {
-      @include responsive(desktop-screens) {
-        margin-top: 160px;
-      }
-
       .flexbox {
         @include flex-box {
           justify-content: space-between;
@@ -807,6 +803,10 @@ main {
                 background-color: $color-sub;
                 transition: 0.28s;
               }
+
+              a {
+                color: $body-bg;
+              }
             } // button
           } // modal-btn
         } // pofol-info
@@ -871,21 +871,47 @@ footer {
         font-size: 24px;
       }
 
-      a {
+      .email {
+        position: relative;
         display: inline-block;
-        margin: 24px 0 60px 0;
+        margin: 24px 0 14px 0;
         cursor: pointer;
         font-size: 32px;
 
-        &:hover {
-          color: $color-main;
-          // 호버하면 밑줄 형광펜 애니메이션으로 바꾸기, Outlook기능 넣어보기 outlook은 시간 없으면 넘기기
+        &::after {
+          content: '';
+          display: inline-block;
+          position: absolute;
+          left: 0; bottom: -10px;
+          width: 0;
+          height: 6px;
+          border-radius: 4px;
+          background: rgba(246, 209, 95, .5);
+        }
+
+        &:hover::after {
+          content: '';
+          display: inline-block;
+          position: absolute;
+          left: 0; bottom: -10px;
+          width: 100%;
+          height: 6px;
+          border-radius: 4px;
+          transition: all 1s ease;
+          background: rgba(246, 209, 95, .5);
         }
 
         @include responsive(tablet-screens) {
           font-size: 48px;
         }
-      } // address
+      } // email
+
+      p {
+        margin-bottom: 60px;
+        font-size: 16px;
+        color: #888;
+        // color: #f6d15f;
+      }
 
       .git,
       .topbtn {
