--- a/scss/index.scss
+++ b/scss/index.scss
@@ -47,6 +47,10 @@
   }
 }
 
+.hideme {
+  opacity: 0;
+}
+
 h3 { // 섹션 타이틀 (공통소스)
   display: inline-block;
   position: relative;
@@ -90,6 +94,7 @@ body {
     offset-distance: 100%;
   }
 }
+
 
 
 
@@ -158,7 +163,7 @@ header {
             animation: cloudLoop 20s infinite linear;
 
             @include responsive(tablet-screens) {
-              top: -20%;
+              top: -12%;
             }
           }
 
@@ -253,10 +258,9 @@ header {
 
     .mobile-nav-wrap {
       position: fixed;
-      height: 100%;
+      top: 0; left: 0;
       width: 0;
-      top: 0;
-      left: 0;
+      height: 100%;
       overflow-x: hidden;
       transition: 0.5s;
       z-index: 99;
@@ -269,13 +273,13 @@ header {
 
         &::before,
         &::after {
+          content: '';
           display: inline-block;
           position: absolute;
           top: 0; left: 50%;
-          transform: translate(-50%, -50%);
-          content: '';
           width: 8px;
           height: 38px;
+          transform: translate(-50%, -50%);
           border-radius: 4px;
           background-color: $body-bg;
           cursor: pointer;
@@ -291,31 +295,30 @@ header {
       } // close-btn
 
       .mobile-nav {
-        position: relative;
+        position: absolute;
         top: 50%;
-        transform: translateY(-60%);
+        transform: translateY(-50%);
         width: 100%;
         text-align: center;
-        margin-top: 30px;
         font-family: mckloud-stroke;
 
         li {
           a {
-            font-size: 52px;
+            font-size: 9.2vw;
             letter-spacing: 8px;
             line-height: 100px;
             color: $body-bg;
 
             &:hover {
               color: $body-bg;
-              font-size: 56px;
+              font-size: 9.8vw;
               font-family: mckloud-full;
               transition: 0.8s;
             }
 
             .active {
               color: $body-bg;
-              font-size: 56px;
+              font-size: 9.8vw;
               font-family: mckloud-full;
             }
           } // a
@@ -426,12 +429,10 @@ main {
 
             .front {
               transform:rotateY(0deg);
-
             }
 
             .back {
               transform:rotateY(180deg);
-              
             }
           } // flip
         } // me-emoticon
