--- a/css/index.css
+++ b/css/index.css
@@ -152,10 +152,6 @@ body {
   overflow-x: hidden;
 }
 
-body {
-  z-index: -99;
-}
-
 @-webkit-keyframes cloudLoop {
   0% {
     transform: translate3d(-100%, 0, 0);
@@ -416,6 +412,10 @@ header #home .intro-flip-wrap #textFlip .text-wrap .next {
 }
 
 /* ==================== main ==================== */
+section:nth-child(1) {
+  opacity: 0;
+}
+
 main {
   margin: 200px 0;
   line-height: 1.5em;
@@ -577,7 +577,6 @@ main #skill .skill-bg .skill-info .info-box {
   margin-bottom: 24px;
   border-radius: 20px;
   font-size: 16px;
-  font-weight: 600;
   background-color: rgba(252, 252, 252, 0.8);
 }
 @media screen and (min-width: 768px) {
@@ -632,9 +631,6 @@ main #skill .skill-bg .skill-info .info-box .flexbox .skill-des .percentage {
   font-size: 60px;
   font-weight: 800;
   color: rgba(51, 51, 51, 0.1);
-}
-main #skill .skill-bg .skill-info .info-box .flexbox .skill-des:div:last-child {
-  position: relative;
 }
 @media screen and (min-width: 768px) {
   main #skill .skill-bg .skill-info .info-box1,
