--- a/css/index.css
+++ b/css/index.css
@@ -499,6 +499,15 @@ main #skill .skill-bg {
     height: auto;
   }
 }
+main #skill .skill-bg .flower {
+  position: absolute;
+  top: 40px;
+  left: 200px;
+  width: 20px;
+  height: 20px;
+  background-color: pink;
+  border-radius: 50%;
+}
 main #skill .skill-bg .grass {
   position: relative;
 }
@@ -643,89 +652,89 @@ main #skill .skill-circle .cir-html {
   top: -920px;
   left: 0px;
   background-color: #f16529;
-  -webkit-animation: trackPath 20s linear 3000ms infinite;
-          animation: trackPath 20s linear 3000ms infinite;
+  -webkit-animation: trackPath 12s linear infinite;
+          animation: trackPath 12s linear infinite;
   offset-path: path("M920.40,435.1S1017.07,205.51,717,176.22,305.36,232.4,238.81,355s26.41,163.54,59.26,164.32,81.73,9.13,123.51,43.8S642.87,698,767.92,680.11,866,558.12,920.40,435.1Z");
 }
 main #skill .skill-circle .cir-css {
   top: -920px;
   left: -30px;
   background-color: #0065f4;
-  -webkit-animation: trackPath 20s 3500ms linear infinite;
-          animation: trackPath 20s 3500ms linear infinite;
+  -webkit-animation: trackPath 16s linear infinite;
+          animation: trackPath 16s linear infinite;
   offset-path: path("M1001.17,438.72s41.55-246.48-276.6-277.93S288.07,221.1,217.5,352.72s28,175.58,62.84,176.42,86.66,9.8,131,47S645.94,721,778.54,701.76,988.56,612.66,1001.17,438.72Z");
 }
 main #skill .skill-circle .cir-sass {
   top: -920px;
   left: -40px;
   background-color: #cc6699;
-  -webkit-animation: trackPath 20s 4000ms linear infinite;
-          animation: trackPath 20s 4000ms linear infinite;
+  -webkit-animation: trackPath 18s 500ms linear infinite;
+          animation: trackPath 18s 500ms linear infinite;
   offset-path: path("M1060,440S1096.68,156.74,734.88,132,238.5,189.56,200.25,339.24s31.85,199.67,90.46,200.62S328.26,551,378.64,593.33,645.47,758,796.25,736.16,1035.09,634.84,1060,440Z");
 }
 main #skill .skill-circle .cir-jquery {
   top: -940px;
   left: 0;
   background-color: #0868ac;
-  -webkit-animation: trackPath 20s 4500ms linear infinite;
-          animation: trackPath 20s 4500ms linear infinite;
-  offset-path: path("M1060,440S1096.68,156.74,734.88,132,238.5,189.56,200.25,339.24s31.85,199.67,90.46,200.62S328.26,551,378.64,593.33,645.47,758,796.25,736.16,1035.09,634.84,1060,440Z");
+  -webkit-animation: trackPath 18s 500ms linear infinite;
+          animation: trackPath 18s 500ms linear infinite;
+  offset-path: path("M1001.17,438.72s41.55-246.48-276.6-277.93S288.07,221.1,217.5,352.72s28,175.58,62.84,176.42,86.66,9.8,131,47S645.94,721,778.54,701.76,988.56,612.66,1001.17,438.72Z");
 }
 main #skill .skill-circle .cir-javascript {
   top: -880px;
   left: -30px;
   color: #666;
   background-color: #ffdf00;
-  -webkit-animation: trackPath 20s 5000ms linear infinite;
-          animation: trackPath 20s 5000ms linear infinite;
+  -webkit-animation: trackPath 12s 1000ms linear infinite;
+          animation: trackPath 12s 1000ms linear infinite;
   offset-path: path("M1001.17,438.72s41.55-246.48-276.6-277.93S288.07,221.1,217.5,352.72s28,175.58,62.84,176.42,86.66,9.8,131,47S645.94,721,778.54,701.76,988.56,612.66,1001.17,438.72Z");
 }
 main #skill .skill-circle .cir-react {
   top: -880px;
   left: 0;
   background-color: #6ecff1;
-  -webkit-animation: trackPath 20s 2500ms linear infinite;
-          animation: trackPath 20s 2500ms linear infinite;
+  -webkit-animation: trackPath 14s 1000ms linear infinite;
+          animation: trackPath 14s 1000ms linear infinite;
   offset-path: path("M920.40,435.1S1017.07,205.51,717,176.22,305.36,232.4,238.81,355s26.41,163.54,59.26,164.32,81.73,9.13,123.51,43.8S642.87,698,767.92,680.11,866,558.12,920.40,435.1Z");
 }
 main #skill .skill-circle .cir-git {
   top: -900px;
   left: 10px;
   background-color: #ee2330;
-  -webkit-animation: trackPath 20s 2000ms linear infinite;
-          animation: trackPath 20s 2000ms linear infinite;
+  -webkit-animation: trackPath 18s 1500ms linear infinite;
+          animation: trackPath 18s 1500ms linear infinite;
   offset-path: path("M920.40,435.1S1017.07,205.51,717,176.22,305.36,232.4,238.81,355s26.41,163.54,59.26,164.32,81.73,9.13,123.51,43.8S642.87,698,767.92,680.11,866,558.12,920.40,435.1Z");
 }
 main #skill .skill-circle .cir-nodejs {
   top: -940px;
   left: 0;
   background-color: #3f873f;
-  -webkit-animation: trackPath 20s 1500ms linear infinite;
-          animation: trackPath 20s 1500ms linear infinite;
+  -webkit-animation: trackPath 22s 1500ms linear infinite;
+          animation: trackPath 22s 1500ms linear infinite;
   offset-path: path("M1001.17,438.72s41.55-246.48-276.6-277.93S288.07,221.1,217.5,352.72s28,175.58,62.84,176.42,86.66,9.8,131,47S645.94,721,778.54,701.76,988.56,612.66,1001.17,438.72Z");
 }
 main #skill .skill-circle .cir-bootstrap {
   top: -920px;
   left: 0;
   background-color: #7952b3;
-  -webkit-animation: trackPath 20s linear infinite;
-          animation: trackPath 20s linear infinite;
+  -webkit-animation: trackPath 20s 2000ms linear infinite;
+          animation: trackPath 20s 2000ms linear infinite;
   offset-path: path("M1001.17,438.72s41.55-246.48-276.6-277.93S288.07,221.1,217.5,352.72s28,175.58,62.84,176.42,86.66,9.8,131,47S645.94,721,778.54,701.76,988.56,612.66,1001.17,438.72Z");
 }
 main #skill .skill-circle .cir-photoshop {
   top: -940px;
   left: 0;
   background-color: #31a8ff;
-  -webkit-animation: trackPath 20s 500ms linear infinite;
-          animation: trackPath 20s 500ms linear infinite;
+  -webkit-animation: trackPath 20s 2000ms linear infinite;
+          animation: trackPath 20s 2000ms linear infinite;
   offset-path: path("M1001.17,438.72s41.55-246.48-276.6-277.93S288.07,221.1,217.5,352.72s28,175.58,62.84,176.42,86.66,9.8,131,47S645.94,721,778.54,701.76,988.56,612.66,1001.17,438.72Z");
 }
 main #skill .skill-circle .cir-illust {
   top: -900px;
   left: -40px;
   background-color: #ff9a00;
-  -webkit-animation: trackPath 20s 1000ms linear infinite;
-          animation: trackPath 20s 1000ms linear infinite;
+  -webkit-animation: trackPath 22s 2500ms linear infinite;
+          animation: trackPath 22s 2500ms linear infinite;
   offset-path: path("M1060,440S1096.68,156.74,734.88,132,238.5,189.56,200.25,339.24s31.85,199.67,90.46,200.62S328.26,551,378.64,593.33,645.47,758,796.25,736.16,1035.09,634.84,1060,440Z");
 }
 main #portfolio {
