--- a/css/index.css
+++ b/css/index.css
@@ -131,8 +131,8 @@ footer {
 h3 {
   display: inline-block;
   position: relative;
-  margin: 0 auto;
   margin-bottom: 100px;
+  text-align: left;
   color: #77addf;
 }
 h3::after {
@@ -235,19 +235,19 @@ header #home .header-bg .cloud-animation .cloud-wrap .cloud img {
 header #home .header-bg .cloud-animation .cloud-wrap .cloud1 {
   top: -6%;
   right: 0;
-  -webkit-animation: cloudLoop 20s infinite linear;
-          animation: cloudLoop 20s infinite linear;
+  -webkit-animation: cloudLoop 18s infinite linear;
+          animation: cloudLoop 18s infinite linear;
 }
 @media screen and (min-width: 768px) {
   header #home .header-bg .cloud-animation .cloud-wrap .cloud1 {
-    top: -20%;
+    top: -16%;
   }
 }
 header #home .header-bg .cloud-animation .cloud-wrap .cloud2 {
   top: 20%;
   left: 80%;
-  -webkit-animation: cloudLoop 30s infinite linear;
-          animation: cloudLoop 30s infinite linear;
+  -webkit-animation: cloudLoop 26s infinite linear;
+          animation: cloudLoop 26s infinite linear;
 }
 header #home .header-bg .cloud-animation .cloud-wrap .cloud3 {
   top: 70%;
@@ -275,7 +275,31 @@ header #home nav #gnb li {
   line-height: 60px;
 }
 header #home nav #gnb li a {
+  position: relative;
   color: #000;
+}
+header #home nav #gnb li a::after {
+  content: "";
+  display: inline-block;
+  position: absolute;
+  left: 0;
+  bottom: 10px;
+  width: 0;
+  height: 6px;
+  border-radius: 4px;
+  background: rgba(246, 209, 95, 0.5);
+}
+header #home nav #gnb li a:hover::after {
+  content: "";
+  display: inline-block;
+  position: absolute;
+  left: 0;
+  bottom: 10px;
+  width: 100%;
+  height: 6px;
+  border-radius: 4px;
+  transition: all 1s ease;
+  background: rgba(246, 209, 95, 0.5);
 }
 header #home nav #gnb li a:hover {
   font-weight: 600;
