--- a/scss/index.scss
+++ b/scss/index.scss
@@ -53,6 +53,7 @@ h3 { // 섹션 타이틀 (공통소스)
   margin-bottom: 100px;
   text-align: left;
   color: $color-main;
+  // background-color: #000;
 
   &::after {
     content: '';
@@ -170,7 +171,7 @@ header {
       } // cloud-animation
     } // header-bg
 
-    nav {
+    .pc-nav {
       position: fixed;
       top: 0; left: 50%;
       transform: translateX(-50%);
@@ -886,8 +887,8 @@ footer {
           width: 100%;
           height: 6px;
           border-radius: 4px;
-          transition: all 1s ease;
-          background: rgba(246, 209, 95, .5);
+          transition: all 0.6s ease;
+          background: rgba(246, 209, 95, .6);
         }
 
         @include responsive(tablet-screens) {
@@ -924,7 +925,7 @@ footer {
 
         &:hover {
           filter: hue-rotate(60deg);
-          transition: 0.4s;
+          transition: all 0.4s;
         }
       } // topbtn
     } // contact
