--- a/scss/index.scss
+++ b/scss/index.scss
@@ -173,15 +173,16 @@ header {
 
     .pc-nav {
       position: fixed;
-      top: 0; left: 50%;
+      top: 20px; left: 50%;
+      width: 80%;
+      height: 60px;
+      border-radius: 20px;
       transform: translateX(-50%);
-      width: 100%;
       z-index: 99;
-      
+
       #gnb {
         display: flex;
         justify-content: center;
-        height: 60px;
 
         li {
           width: 160px;
@@ -190,30 +191,31 @@ header {
           line-height: 60px;
 
           a {
+            display: inline-block;
             position: relative;
             color: #000;
 
             &::after {
               content: '';
-              display: inline-block;
               position: absolute;
-              left: 0; bottom: 10px;
-              width: 0;
-              height: 6px;
+              left: 0; bottom: 20px;
+              width: 100%;
+              height: 4px;
               border-radius: 4px;
-              background: rgba(246, 209, 95, .5);
+              opacity: 0;
+              background: rgba(0, 0, 0, .5);
             }
     
             &:hover::after {
               content: '';
-              display: inline-block;
               position: absolute;
-              left: 0; bottom: 10px;
+              left: 0; bottom: 16px;
               width: 100%;
-              height: 6px;
+              height: 4px;
               border-radius: 4px;
-              transition: all 1s ease;
-              background: rgba(246, 209, 95, .5);
+              opacity: 1;
+              transition: all .4s ease;
+              background: rgba(0, 0, 0, .5);
             }
           }
 
@@ -224,9 +226,10 @@ header {
       } // gnb
 
       .menu_top {
-        border-bottom: 1px solid  rgba(119, 173, 223, .8);
+        border: 1px solid  rgba(0, 0, 0, .2);
+        border-radius: 20px;
         backdrop-filter: blur(3px);
-        transition: 1s;
+        transition: .5s;
       }
     } // nav
 
@@ -373,12 +376,6 @@ header {
 
 
 /* ==================== main ==================== */
-// section {
-//   &:nth-child(1) {
-//     opacity: 0;
-//   }
-// }
-
 main {
   margin: 200px 0;
   line-height: 1.5em;
@@ -702,7 +699,7 @@ main {
       .cir-photoshop {
         top: -940px; left: 0;
         background-color: #31a8ff;
-        animation: trackPath 20s 2000ms linear infinite;
+        animation: trackPath 10s 2000ms linear infinite;
         offset-path: path('M1001.17,438.72s41.55-246.48-276.6-277.93S288.07,221.1,217.5,352.72s28,175.58,62.84,176.42,86.66,9.8,131,47S645.94,721,778.54,701.76,988.56,612.66,1001.17,438.72Z');
       }
       .cir-illust {
